@@ -1,6 +1,7 @@
 <?php
+include(realpath('./classes/initPeakMVC.php'));
 $file_to_test = realpath('./../library/Peak/Controller.php');
-include($file_to_test);
+include_once($file_to_test);
 echo 'Tested file: '.$file_to_test.'<br />';
 
 class TestOfController extends UnitTestCase
@@ -15,8 +16,6 @@ class TestOfController extends UnitTestCase
     
     function testOfInit()
     {  	
-    	include($this->peak().'/Core.php');
-    	include($this->peak().'/Registry.php');
     	
     	$this->ctrl = new testController();
     	$this->assertTrue(is_a($this->ctrl,'Peak_Controller') ,'$ctrl is not an object of Peak_Controller');
@@ -28,11 +27,11 @@ class TestOfController extends UnitTestCase
     	$this->assertTrue(($this->ctrl->title === 'testController') ,'$title is not testController');
     	$this->assertNull($this->ctrl->file,'$file should be null');
     	
-    	//echo $this->ctrl->path;
-    	//echo $this->ctrl->type;
-    	
     	$this->assertTrue(is_array($this->ctrl->c_actions) ,'$c_actions is not an array');
     	$this->assertTrue(empty($this->ctrl->c_actions) ,'$c_actions is not empty');
+    	
+    	$this->ctrl->listActions();
+    	print_r($this->ctrl->c_actions);
     }
     
     
@@ -42,6 +41,20 @@ class TestOfController extends UnitTestCase
 class testController extends Peak_Controller 
 { 
 	
+	//public function index()
+	//{
+		
+//	}
+	
+	public function indexAction()
+	{
+		
+	}
+	
+	public function contactAction()
+	{
+		
+	}
 	
 
 }
